# backend-restaurant-booking-python

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  HLD.md  LLD.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: __init__.py  app.py
src/config/: __init__.py  _database_config.py  _jwt_config.py  _logger.py
src/constants/: __init__.py  admin.py
src/controllers/: __init__.py  admin_controller.py  auth_controller.py  users_controller.py
src/middlewares/: __init__.py  jwt_auth.py  request_logging_middleware.py
src/migrations/: env.py
src/migrations/versions/: 02eb6c025db7_add_admins_table.py  1b040ee253bc_create_user_table.py
src/models/: __init__.py  admin_model.py  user_model.py
src/schemas/: admin_schema.py  auth_schema.py  user_schema.py
src/services/: __init__.py  admin_service.py  auth_service.py  users_service.py
src/utils/: jwt_service.py
src/validators/: __init__.py  common_validator.py  email_validator.py  password_validator.py  security_validator.py
