[tool.poetry]
name = "backend-restaurant-booking-python"
version = "0.1.0"
description = ""
authors = ["Akashdeep singh <akashdeep.singh@sifars.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
alembic = ">=1.16.4"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
python-dotenv = ">=1.1.1,<2.0.0"
sqlalchemy = ">=2.0.41,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pydantic = ">=2.11.7,<3.0.0"
email-validator = ">=2.2.0,<3.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
bcrypt = "4.0.1"
PyJWT = ">=2.8.0,<3.0.0"
colorlog = ">=6.9.0,<7.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"